--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,12 +19,18 @@ android {
     dataBinding {
         enabled = true
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.2.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
@@ -33,4 +39,5 @@ dependencies {
     implementation files('libs/volley.jar')
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
 }
