--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ android {
             debuggable true
             minifyEnabled false
             signingConfig signingConfigs.debug
-            resValue "string", "LOGIN_URL", "http://10.163.19.140/rdweb/project/webservices_forms/login_service/login_services.php"
+            resValue "string", "LOGIN_URL", "http://landadmin.tn.gov.in/tnrd/rdweb/project/webservices_forms/login_service/login_services.php"
             resValue "string", "BASE_SERVICES_URL", "http://10.163.19.140/rdweb/project/webservices_forms/master_services/master_services.php"
             resValue "string", "APP_MAIN_SERVICES_URL", "http://10.163.19.140/rdweb/project/webservices_forms/mi_tank/mi_tank_services.php"
             resValue "string", "TNRD_HOST_NAME", "10.163.19.140"
@@ -76,14 +76,19 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha09'
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation files('libs/volley.jar')
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'android.arch.paging:runtime:1.0.1'
     implementation 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
+    implementation 'android.arch.navigation:navigation-ui:1.0.0'
 }
