--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,29 +3,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.nic.VPTax">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
+
+    <uses-feature
+        android:name="android.hardware.camera.any"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <uses-permission android:name="android.permission.FLAG_GRANT_READ_URI_PERMISSION" />
 
     <application
-        android:name="com.nic.VPTax.Application.NICApplication"
+        android:name=".Application.NICApplication"
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/home"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/home"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-    <uses-library
+        <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
+
         <activity android:name="com.nic.VPTax.activity.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,10 +54,15 @@
         </activity>
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name"
-             />
+            android:label="@string/app_name" />
         <activity
             android:name="com.nic.VPTax.activity.LoginScreen"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="locked"
+            android:windowSoftInputMode="stateUnchanged|adjustPan" />
+
+        <activity
+            android:name="com.nic.VPTax.activity.RegisterScreen"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="locked"
             android:windowSoftInputMode="stateUnchanged|adjustPan" />
@@ -53,6 +77,16 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="locked"
             android:windowSoftInputMode="stateUnchanged|adjustPan" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.nic.VPTax.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
     </application>
 
 </manifest>
