--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:name="android.hardware.camera.autofocus"
         android:required="false" />
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -92,6 +93,12 @@
 
         <activity
             android:name="com.nic.TPTaxDepartment.activity.AssessmentStatus"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="locked"
+            android:windowSoftInputMode="stateUnchanged|adjustPan" />
+
+        <activity
+            android:name="com.nic.TPTaxDepartment.activity.CameraScreen"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="locked"
             android:windowSoftInputMode="stateUnchanged|adjustPan" />
