--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,4 +105,6 @@ dependencies {
     implementation 'android.arch.navigation:navigation-ui:1.0.0'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.karumi:dexter:4.2.0'
+    implementation 'com.jsibbold:zoomage:1.3.0'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
 }
