--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,5 @@ dependencies {
     implementation 'com.karumi:dexter:4.2.0'
     implementation 'com.jsibbold:zoomage:1.3.0'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
 }
