Change Designs and Add Some extra tables in local storage Load Spinner Details into UI.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS"
+        tools:ignore="ProtectedPermissions" />
 
 
     <uses-permission android:name="android.permission.FLAG_GRANT_READ_URI_PERMISSION" />
@@ -94,6 +96,11 @@
             android:screenOrientation="locked"
             android:windowSoftInputMode="stateUnchanged|adjustPan" />
 
+        <activity
+            android:name="com.nic.TPTaxDepartment.activity.ExistingTradeList"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="locked"
+            android:windowSoftInputMode="stateUnchanged|adjustPan" />
         <activity
             android:name="com.nic.TPTaxDepartment.activity.ExistingTradeSubmit"
             android:configChanges="orientation|keyboardHidden"
