Field Visit API call and store Local add xml files for field visit adapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -142,7 +142,9 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateUnchanged|adjustPan" />
-        <activity android:name=".activity.ExistTradeViewClass" />
+        <activity android:name=".activity.ExistTradeViewClass"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="locked"/>
 
 
         <provider
