--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
     <application
         android:name="com.nic.TPTaxDepartment.Application.NICApplication"
         android:allowBackup="true"
-        android:hardwareAccelerated="false"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/home"
         android:label="@string/app_name"
         android:largeHeap="true"
