--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,4 +111,6 @@ dependencies {
     implementation 'com.jsibbold:zoomage:1.3.0'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+
+    implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4'
 }
