--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,4 +113,8 @@ dependencies {
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
 
     implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4'
+
+    ///File picker
+    implementation 'com.vincent.filepicker:MultiTypeFilePicker:1.0.5'
+
 }
