Field Visit Design changes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,5 +116,5 @@ dependencies {
 
     ///File picker
     implementation 'com.vincent.filepicker:MultiTypeFilePicker:1.0.5'
-
+    implementation 'commons-io:commons-io:2.4'
 }
