--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,10 +118,10 @@ dependencies {
     implementation 'com.github.scottyab:showhidepasswordedittext:0.8'
 
 
-    ///File picker
+  /*  ///File picker
     implementation 'com.vincent.filepicker:MultiTypeFilePicker:1.0.5'
     implementation 'commons-io:commons-io:2.4'
-
+*/
     //PDF viewer
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
 
