--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,8 +98,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    /*implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'*/
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation files('libs/volley.jar')
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
@@ -115,10 +115,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
 
-    implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4'
+   // implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4'
 
     //hide Password
-    implementation 'com.github.scottyab:showhidepasswordedittext:0.8'
+    //implementation 'com.github.scottyab:showhidepasswordedittext:0.8'
 
 
   /*  ///File picker
@@ -127,7 +127,7 @@ dependencies {
 */
     //PDF viewer
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
-    implementation 'com.android.support:multidex:2.0.0'
-    compile (group: 'com.aspose', name: 'aspose-words', version: '20.6', classifier: 'android.via.java')
+    /*implementation 'com.android.support:multidex:2.0.0'
+    compile (group: 'com.aspose', name: 'aspose-words', version: '20.6', classifier: 'android.via.java')*/
     api 'se.emilsjolander:stickylistheaders:2.7.0'
 }
