--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,14 +44,16 @@ android {
             signingConfig signingConfigs.debug
             //resValue "string", "LOGIN_URL", "http://landadmin.tn.gov.in/tnrd/tndtp_stag/project/webservices/login_service/login_services.php"
             //resValue "string", "LOGIN_URL", "http://landadmin.tn.gov.in/tnrd/tndtp_prod/project/webservices/login_service/login_services.php"
-//            resValue "string", "LOGIN_URL", "https://tnrd.gov.in/tndtp_service/webservices/login_service/login_services.php"
-            resValue "string", "LOGIN_URL", "http://10.163.19.140/tndtp_stag/project/webservices/login_service/login_services.php"
-            //resValue "string", "LOGIN_URL", "http://10.163.19.140/tndtp_stag/project/webservices/login_service/login_services.php"
-            resValue "string", "SAVE_TRADERS_URL", "http://landadmin.tn.gov.in/tnrd/tndtp_stag/project/webservices/tndtp/tndtp_dept_services.php"
-           // resValue "string", "PROD_OPEN_URL", "https://tnrd.gov.in/tndtp_service/webservices/tndtp/tndtp_open_services.php"
+
+           /* resValue "string", "LOGIN_URL", "http://10.163.19.140/tndtp_stag/project/webservices/login_service/login_services.php"
             resValue "string", "PROD_OPEN_URL", "http://10.163.19.140/tndtp_stag/project/webservices/tndtp/tndtp_open_services.php"
             resValue "string", "TRADERS_URL", "http://10.163.19.140/tndtp_stag/project/webservices/tndtp/tndtp_dept_services.php"
-            //resValue "string", "TRADERS_URL", "https://tnrd.gov.in/tndtp_service/webservices/tndtp/tndtp_dept_services.php"
+           */
+            resValue "string", "LOGIN_URL", "https://tnrd.gov.in/tndtp_service/webservices/login_service/login_services.php"            // resValue "string", "PROD_OPEN_URL", "https://tnrd.gov.in/tndtp_service/webservices/tndtp/tndtp_open_services.php"
+            resValue "string", "TRADERS_URL", "https://tnrd.gov.in/tndtp_service/webservices/tndtp/tndtp_dept_services.php"
+            resValue "string", "PROD_OPEN_URL", "https://tnrd.gov.in/tndtp_service/webservices/tndtp/tndtp_open_services.php"
+
+            resValue "string", "SAVE_TRADERS_URL", "http://landadmin.tn.gov.in/tnrd/tndtp_stag/project/webservices/tndtp/tndtp_dept_services.php"
             resValue "string", "BASE_SERVICES_URL", "http://10.163.19.140/rdweb/project/webservices_forms/master_services/master_services.php"
             resValue "string", "APP_MAIN_SERVICES_URL", "http://10.163.19.140/rdweb/project/webservices_forms/mi_tank/mi_tank_services.php"
             resValue "string", "TNRD_HOST_NAME", "10.163.19.140"
