--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,10 +148,18 @@
             android:screenOrientation="portrait"
             />
         <activity android:name=".activity.NewExistTraderWholeDetailsViewClass"
+            android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateUnchanged|adjustPan"
             />
-        <activity android:name=".activity.QRCodeReaderActivity" />
-
+        <activity android:name=".activity.QRCodeReaderActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateUnchanged|adjustPan"/>
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:screenOrientation="portrait"
+            tools:replace="screenOrientation" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
