Image compress and disable date in new trade view.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,14 @@ def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 android {
     compileSdkVersion 29
+    /*useLibrary 'org.apache.http.legacy'
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }*/
     defaultConfig {
         applicationId "com.nic.TPTaxDepartment"
         minSdkVersion 21
