--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         production {
-            debuggable false
+            debuggable true
             minifyEnabled false
             shrinkResources false
             signingConfig signingConfigs.debug
@@ -121,8 +121,8 @@ dependencies {
     implementation 'android.arch.paging:runtime:1.0.1'
     implementation 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
-    implementation 'android.arch.navigation:navigation-ui:1.0.0'
+  /*  implementation 'android.arch.navigation:navigation-fragment:1.0.0'
+    implementation 'android.arch.navigation:navigation-ui:1.0.0'*/
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.karumi:dexter:4.2.0'
     implementation 'com.jsibbold:zoomage:1.3.0'
